[workspace]

resolver = "2"

members = [
"crates/tree-sitter-minisdf",
"crates/minisdf-ast",

"examples/simple"
]


[workspace.dependencies]
tree-sitter = "0.20.10"
thiserror = "1.0.44"
ahash = "0.8.3"
tinyvec = "1.6.0"
tinyvec_string = "0.3"
slotmap = "1.0"
graphviz-rust = "0.6.6"
backtrace = "0.3.69"
annotate-snippets = "0.9.2"
lazy_static = "1.4.0"
