[package]
name = "minisdf-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec_string = {workspace = true, features = ["alloc"]}
annotate-snippets.workspace = true
backtrace.workspace = true
tree-sitter.workspace = true
ahash.workspace = true
tinyvec = {workspace = true, features = ["alloc"]}
