[package]
name = "minisdf-optimizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvsdg = {git = "https://gitlab.com/tendsinmende/vola.git", branch = "main"}
#rvsdg = {path = "../../../vola/crates/rvsdg"}
rvsdg-viewer = {git = "https://gitlab.com/tendsinmende/vola.git", branch = "main"}
minisdf-common = {path = "../minisdf-common"}
minisdf-ast = {path = "../minisdf-ast"}
tinyvec = {workspace = true, features = ["alloc"]}
tinyvec_string = {workspace = true, features = ["alloc"]}
lazy_static.workspace = true
thiserror.workspace = true
ahash.workspace = true
