[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minisdf-ast = {path = "../../crates/minisdf-ast"}
minisdf-optimizer = {path = "../../crates/minisdf-optimizer"}
minisdf-backend-spirv = {path = "../../crates/minisdf-backend-spirv"}
rvsdg-viewer.workspace = true

bytemuck = "1.14"
